welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: error: not found: value getMondehauteur
	for (i <- 1 to getMondehauteur())
                       ^Array1:34: error: not found: value getMondehauteur
	for (i <- 1 to getMondehauteur)
                       ^